add endpoint get current
